Move player names into game map

--- a/lib/tennis_scorer_web/live/scoreboard_live.html.heex
+++ b/lib/tennis_scorer_web/live/scoreboard_live.html.heex
@@ -8,5 +8,5 @@
       <.input field={@form[:player_two_name]} />
     </div>
   </.simple_form>
-  <.score score={@score} player_one_name={@player_one_name} player_two_name={@player_two_name} />
+  <.score game={@game} />
 </div>
