--- a/lib/tennis_scorer_web/live/scoreboard_live.html.heex
+++ b/lib/tennis_scorer_web/live/scoreboard_live.html.heex
@@ -8,5 +8,7 @@
       <.input field={@form[:player_two_name]} />
     </div>
   </.simple_form>
-  <.score game={@game} />
+  <div class="mt-6 text-xl" id="score">
+    <%= @game.player_one_name %> <%= @game.player_one_score %> – <%= @game.player_two_score %> <%= @game.player_two_name %>
+  </div>
 </div>
