--- a/lib/tennis_scorer_web/live/scoreboard_live.html.heex
+++ b/lib/tennis_scorer_web/live/scoreboard_live.html.heex
@@ -1,7 +1,7 @@
-<div class="text-center">
+<div class="h-screen text-center">
   <.simple_form for={@form} phx-change="change" phx-submit="ignore">
-    <h1 class="text-2xl">Tennis Scorer</h1>
-    <div class="flex justify-center space-x-4">
+    <h1 class="text-2xl py-2 border-y-4 border-purple-700">Tennis Scorer</h1>
+    <div class="flex justify-center space-x-4 pt-6">
       <.input field={@form[:player_one_name]} class="" />
       <.button id="point_to_player_one" phx-click="point-to-player-one">Score</.button>
       <.button id="reset_scores" phx-click="reset-scores">Reset</.button>
@@ -9,7 +9,7 @@
       <.input field={@form[:player_two_name]} />
     </div>
   </.simple_form>
-  <div class="mt-6 text-4xl" id="score">
+  <div class="mt-6 py-3 bg-black text-4xl" id="score">
     <%= @game.player_one_name %> <%= @game.player_one_score %> – <%= @game.player_two_score %> <%= @game.player_two_name %>
   </div>
 </div>
