Remove purple edges

--- a/lib/tennis_scorer_web/live/scoreboard_live.html.heex
+++ b/lib/tennis_scorer_web/live/scoreboard_live.html.heex
@@ -1,10 +1,10 @@
 <div class="h-screen text-center">
-  <div class="pb-2 rounded-t-lg border-2 border-b-0 border-purple-700 bg-green-700">
-    <h1 class="mt-0 text-2xl py-2 rounded-t-lg bg-purple-700 text-white font-bold">
-      Tennis Scorer
-    </h1>
+  <h1 class="mt-0 text-2xl py-2 rounded-t-lg bg-purple-700 text-white font-bold">
+    Tennis Scorer
+  </h1>
+  <div class="pb-2 bg-green-700">
     <.simple_form for={@form} phx-change="change" phx-submit="ignore" class="px-2">
-      <div class="flex justify-center space-x-4 py-2">
+      <div class="flex justify-center space-x-4 pt-4 pb-2">
         <.input field={@form[:player_one_name]} onClick="this.select()" />
         <.button id="point_to_player_one" phx-click="point-to-player-one">Score</.button>
         <.button id="reset_scores" phx-click="reset-scores">Reset</.button>
