--- a/lib/tennis_scorer_web/live/scoreboard_live.html.heex
+++ b/lib/tennis_scorer_web/live/scoreboard_live.html.heex
@@ -14,6 +14,6 @@
     </.simple_form>
   </div>
   <div class="py-3 px rounded-b-lg bg-black text-4xl font-bold" id="score">
-    <%= @game.name_1 %> <%= @game.score_1 %> – <%= @game.score_2 %> <%= @game.name_2 %>
+    <%= Game.score(@game) %>
   </div>
 </div>
