--- a/lib/tennis_scorer_web/components/layouts/app.html.heex
+++ b/lib/tennis_scorer_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<main class="px-4 py-20 sm:px-6 lg:px-8 bg-green-950 text-yellow-300">
+<main class="px-4 py-20 sm:px-6 lg:px-8 text-yellow-300">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
