--- a/lib/tennis_scorer_web/live/scoreboard_live.html.heex
+++ b/lib/tennis_scorer_web/live/scoreboard_live.html.heex
@@ -1,4 +1,4 @@
-<div class="h-screen text-center">
+<div class="text-center">
   <h1 class="mt-0 text-2xl py-2 rounded-t-lg bg-purple-700 text-white font-bold">
     Tennis Scorer
   </h1>
