--- a/lib/tennis_scorer_web/live/scoreboard_live.html.heex
+++ b/lib/tennis_scorer_web/live/scoreboard_live.html.heex
@@ -3,17 +3,49 @@
     Tennis Scorer
   </h1>
   <div class="pb-2 bg-green-700">
-    <.simple_form for={@form} phx-change="change" phx-submit="ignore" class="px-2">
       <div class="flex justify-center space-x-4 pt-4 pb-2">
-        <.input field={@form[:name_1]} tabindex="1" onclick="this.select()" />
-        <.button id="point_to_player_1" phx-click="point-to-player-1">Score</.button>
-        <.button id="reset_scores" phx-click="reset-scores">Reset</.button>
-        <.button id="point_to_player_2" phx-click="point-to-player-2">Score</.button>
-        <.input field={@form[:name_2]} tabindex="2" onclick="this.select()" />
+        <span
+          id="player-1"
+          class="text-2xl flex-1 text-left pl-4 leading-normal align-middle"
+        >
+          <%= if @edit_player_1? do %>
+            <form phx-submit="submit-player-1">
+              <.input id="player-1-name" name="name" value={@game.name_1} class="pt-0" phx-hook="AutoFocus" />
+            </form>
+          <% else %>
+            <%= @game.name_1 %>
+            <a id="edit-player-1" phx-click="edit-player-1">
+              <span class="text-green-600"><.icon name="hero-pencil-square" /></span>
+            </a>
+          <% end %>
+        </span>
+        <form>
+        <.button type="button" id="point-to-player-1" phx-click="point-to-player-1">
+          Score
+        </.button>
+        <.button type="button" id="reset-scores" phx-click="reset-scores">Reset</.button>
+        <.button type="button" id="point-to-player-2" phx-click="point-to-player-2">
+          Score
+        </.button>
+        </form>
+        <span
+          id="player-2"
+          class="text-2xl flex-1 text-right pr-4 leading-normal align-middle"
+        >
+          <%= if @edit_player_2? do %>
+            <form phx-submit="submit-player-2">
+              <.input id="player-2-name" name="name" value={@game.name_2} class="pt-0" phx-hook="AutoFocus" />
+            </form>
+          <% else %>
+            <a id="edit-player-2" phx-click="edit-player-2">
+              <span class="text-green-600"><.icon name="hero-pencil-square" /></span>
+            </a>
+            <%= @game.name_2 %>
+          <% end %>
+        </span>
       </div>
-    </.simple_form>
   </div>
   <div class="py-3 px rounded-b-lg bg-black text-4xl font-bold" id="score">
-    <%= @game.name_1 %> <%= @game.score_1 %> – <%= @game.score_2 %> <%= @game.name_2 %>
+    <%= @game.score_1 %> – <%= @game.score_2 %>
   </div>
 </div>
