--- a/lib/tennis_scorer_web/live/scoreboard_live.html.heex
+++ b/lib/tennis_scorer_web/live/scoreboard_live.html.heex
@@ -46,6 +46,6 @@
       </div>
   </div>
   <div class="py-3 px rounded-b-lg bg-black text-4xl font-bold" id="score">
-    <%= @game.score_1 %> – <%= @game.score_2 %>
+    <%= Game.display_score(@game) %>
   </div>
 </div>
