--- a/lib/tennis_scorer_web/live/scoreboard_live.html.heex
+++ b/lib/tennis_scorer_web/live/scoreboard_live.html.heex
@@ -10,15 +10,11 @@
           class="text-2xl flex-1 text-left pl-4 leading-normal align-middle"
         >
           <%= if @edit_player_1? do %>
-            <form phx-submit="submit-player-1">
-              <.input
-                id="player-1-name"
-                name="name"
-                value={@game.name_1}
-                class="pt-0"
-                phx-hook="AutoFocus"
-              />
-            </form>
+            <.edit_name_form
+              input_id="player-1-name"
+              phx-submit="submit-player-1"
+              value={@game.name_1}
+            />
           <% else %>
             {@game.name_1}
             <a id="edit-player-1" phx-click="edit-player-1">
@@ -26,12 +22,26 @@
             </a>
           <% end %>
         </span>
-        <form>
-          <.button type="button" id="point-to-player-1" phx-click="point-to-player-1">
+        <form class="flex gap-2">
+          <.button
+            type="button"
+            id="point-to-player-1"
+            phx-click="point-to-player-1"
+          >
             Score
           </.button>
-          <.button type="button" id="reset-scores" phx-click="reset-scores">Reset</.button>
-          <.button type="button" id="point-to-player-2" phx-click="point-to-player-2">
+          <.button
+            type="button"
+            id="reset-scores"
+            phx-click="reset-scores"
+          >
+            Reset
+          </.button>
+          <.button
+            type="button"
+            id="point-to-player-2"
+            phx-click="point-to-player-2"
+          >
             Score
           </.button>
         </form>
@@ -40,15 +50,11 @@
           class="text-2xl flex-1 text-right pr-4 leading-normal align-middle"
         >
           <%= if @edit_player_2? do %>
-            <form phx-submit="submit-player-2">
-              <.input
-                id="player-2-name"
-                name="name"
-                value={@game.name_2}
-                class="pt-0"
-                phx-hook="AutoFocus"
-              />
-            </form>
+            <.edit_name_form
+              input_id="player-2-name"
+              phx-submit="submit-player-2"
+              value={@game.name_2}
+            />
           <% else %>
             <a id="edit-player-2" phx-click="edit-player-2">
               <span class="text-green-600"><.icon name="hero-pencil-square" /></span>
