--- a/lib/tennis_scorer_web/live/scoreboard_live.html.heex
+++ b/lib/tennis_scorer_web/live/scoreboard_live.html.heex
@@ -65,7 +65,7 @@
       </div>
     </div>
     <div class="py-3 px rounded-b-lg bg-black text-4xl font-bold" id="score">
-      {@score_1} – {@score_2}
+      {@game.score_1} – {@game.score_2}
     </div>
   </div>
 </Layouts.app>
